--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.2",
     "@types/ws": "^8.18.1",
     "ws": "^8.18.2"
   }
