--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,9 @@
     "@prisma/client": "^6.8.2",
     "@types/express": "^5.0.2",
     "@types/ws": "^8.18.1",
+    "helmet": "^8.1.0",
+    "livekit-server-sdk": "^2.13.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.2"
   }
 }
