--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
+    "start": "node dist/server.js",
+    "start:dev": "ts-node src/server.ts",
+    "dev": "nodemon",
+    "prisma:generate": "prisma generate"
   },
   "author": "",
   "license": "ISC",
@@ -12,9 +17,14 @@
     "@prisma/client": "^6.8.2",
     "@types/express": "^5.0.2",
     "@types/ws": "^8.18.1",
+    "braces": "^3.0.3",
+    "express": "^5.1.0",
+    "fill-range": "^7.1.1",
     "helmet": "^8.1.0",
     "livekit-server-sdk": "^2.13.0",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
+    "to-regex-range": "^5.0.1",
     "ws": "^8.18.2"
   }
 }
