--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@repo/db":"*",
     "@prisma/client": "^6.8.2",
     "@types/express": "^5.0.2",
     "@types/ws": "^8.18.1",
