--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/db":"*",
     "@repo/ui": "*",
     "livekit-client": "^2.13.4",
     "next": "^15.3.0",
