--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -13,7 +13,7 @@
     "next-env.d.ts",
     "next.config.js",
     ".next/types/**/*.ts"
-  ],
+, "../web/app/components/studio/StudioHeader.tsx"  ],
   "exclude": [
     "node_modules"
   ]
