--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,8 @@
     "@repo/db": "*",
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.1.10",
+    "axios": "^1.9.0",
+    "crypto": "^1.0.1",
     "livekit-client": "^2.13.4",
     "lucide-react": "^0.514.0",
     "next": "^15.3.3",
