done with redirecting to unique studio

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "baseUrl": ".",
      "paths": {
-       "@component/*": ["./app/components/*"]
+       "@component/*": ["./app/components/*"],
+       "@lib/*":["./app/libs/*"]
      },
   },
   "include": [
