--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,10 +7,15 @@
       }
     ],
     "baseUrl": ".",
-     "paths": {
-       "@component/*": ["./app/components/*"],
-       "@lib/*":["./app/libs/*"]
-     },
+    "paths": {
+      "@component/*": [
+        "./app/components/*"
+      ],
+      "@lib/*": [
+        "./app/libs/*"
+      ]
+    },
+    "resolveJsonModule": true
   },
   "include": [
     "**/*.ts",
