--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,7 +1,9 @@
 {
     "name": "@repo/db",
     "version": "0.0.0",
+    "type": "module",
     "scripts": {
+        "build":"npx tsc -b",
         "db:generate": "npx prisma generate",
         "db:migrate": "npx prisma migrate dev --skip-generate",
         "db:deploy": "npx prisma migrate deploy"
@@ -14,7 +16,7 @@
         "typescript": "^5.8.3"
     },
     "exports": {
-        ".": "./src/index.ts"
+        ".": "./dist/index.js"
     },
     "dependencies": {
         "@prisma/client": "^6.9.0"
