--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "@repo/typescript-config/react-library.json",
     "compilerOptions": {
       "outDir": "dist",
-      // "rootDir": "src"
+"module": "NodeNext",
+"moduleResolution": "NodeNext",
+"target": "ES2020",
     },
     "include": ["src", "src/client.ts"],
     "exclude": ["node_modules", "dist"]
