--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "socket.io-client": "^4.8.1"
   }
 }
