--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,9 +14,11 @@
     "@repo/db": "*",
     "@repo/typescript-config": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@supabase/supabase-js": "^2.50.3",
     "@tailwindcss/postcss": "^4.1.10",
     "axios": "^1.9.0",
     "crypto": "^1.0.1",
+    "idb": "^8.0.3",
     "livekit-client": "^2.13.4",
     "lucide-react": "^0.514.0",
     "next": "^15.3.3",
