recording prototype done

--- a/.env.web.eg
+++ b/.env.web.eg
@@ -7,3 +7,5 @@ DATABASE_URL="postgresql://postgres:mysecretpassword@db:5432/mydb"
 DIRECT_URL="postgresql://postgres:mysecretpassword@db:5432/mydb"
 NEXT_PUBLIC_BACKEND_URL="http://api:3001"
 REDIS_URL="redis://redis:6379"
+SUPABASE_URL=supabase_url
+SUPABASE_ANON_KEY=supabase_anon_key
